...
          {t("auth.signUp")}
        </Text>
      </View>

      <View style={[styles.verticallySpaced, styles.mt20]}>
        <TextInput
          testID="signup-email-input"
          onChangeText={(text) => setEmail(text)}
          value={email}
          placeholder={t("auth.emailPlaceholder")}
          autoCapitalize={"none"}
          style={[
            styles.input,
...
          ]}
          placeholderTextColor={theme.colors.secondary}
        />
      </View>
      <View style={styles.verticallySpaced}>
        <TextInput
          testID="signup-password-input"
          onChangeText={(text) => setPassword(text)}
          value={password}
          secureTextEntry={true}
          placeholder={t("auth.passwordPlaceholder")}
          autoCapitalize={"none"}
          style={[
...
