...
    <View
      style={[styles.container, { backgroundColor: theme.colors.background }]}
    >
      <Stack.Screen options={{ title: t("auth.login"), headerShown: false }} />
      <View style={[styles.verticallySpaced, styles.mt20]}>
        <TextInput
          testID="login-email-input"
          onChangeText={(text) => setEmail(text)}
          value={email}
          placeholder={t("auth.emailPlaceholder")}
          autoCapitalize={"none"}
          style={[
            styles.input,
...
          ]}
          placeholderTextColor={theme.colors.secondary}
        />
      </View>
      <View style={styles.verticallySpaced}>
        <TextInput
          testID="login-password-input"
          onChangeText={(text) => setPassword(text)}
          value={password}
          secureTextEntry={true}
          placeholder={t("auth.passwordPlaceholder")}
          autoCapitalize={"none"}
          style={[
...
