...
          {t("auth.resetPasswordDescription")}
        </Text>
      </View>

      <View style={styles.verticallySpaced}>
        <TextInput
          testID="forgot-password-email-input"
          onChangeText={(text) => setEmail(text)}
          value={email}
          placeholder={t("auth.emailPlaceholder")}
          autoCapitalize={"none"}
          style={[
            styles.input,
...
